computer is a liitle werid

--- a/Advanced Calculus/macros.tex
+++ b/Advanced Calculus/macros.tex
@@ -40,3 +40,5 @@
 \newcommand{\myref}[2]{\hyperref[#2]{#1\ \ref*{#2}}}
 \newcommand{\power}[1]{\mathcal{P}(#1)}
 \newcommand{\cc}{\mathcal{C}}
+\newcommand{\disjointunion}{\mathbin{\dot{\cup}}}
+\newcommand{\diam}[1]{\text{diam}\, #1}
