--- a/Probability/ prob.tex
+++ b/Probability/ prob.tex
@@ -1,4 +1,3 @@
-
 \documentclass{report}
 \input{preamble}
 \input{macros}
@@ -246,7 +245,6 @@ Notice that $\cc$ is countable because $\mathcal{A}$ is countable, and $\cc$ is 
 \end{equation}
 \end{definition}
 \fbox{\begin{minipage}{39em}
-Notice $\mathcal{L}_X: \set{x_1} \mapsto P(X^{-1}[\set{x_1}])$ is the distribution function.\\
 
 Distribution function is a function on the image of a random variable $X$, that map a real number to the probability the random variable $X$ is the real number $x_1$. How? Probability is the measure of the set that can be mapped to $x_1$. \\
 
@@ -760,4 +758,7 @@ E[I]=p \text{ and }\var [X]=p-p^2
     \end{minipage}
 \end{center}
 \end{theorem}
+\fbox{\begin{minipage}{39em}
+$P$ measure is specified by the natural condition of experiment (if the coin is fair). $X$ is specified by what do you want to observe in the experiment.
+\end{minipage}}
 \end{document}
