--- a/Advanced Calculus/preamble.tex
+++ b/Advanced Calculus/preamble.tex
@@ -16,6 +16,24 @@
 \usepackage[letterpaper, tmargin=2cm, rmargin=0.5in, lmargin=0.5in, bmargin=80pt, footskip=.2in]{geometry}
 \usepackage{adjustbox}
 
+\usepackage{etoolbox}
+
+% Create a new toggle
+\newtoggle{firstsection}
+
+% Redefine the \chapter command to reset the toggle for each new chapter
+\let\oldchapter\chapter
+\renewcommand{\chapter}{\toggletrue{firstsection}\oldchapter}
+
+% Redefine the \section command to check the toggle
+\let\oldsection\section
+\renewcommand{\section}{
+    \iftoggle{firstsection}
+    {\togglefalse{firstsection}} % If it's the first section, just switch off the toggle for next sections
+    {\clearpage} % If it's not the first section, start a new page
+    \oldsection
+}
+
 % Mathematics
 \usepackage{amsmath,amsfonts,amsthm,amssymb,mathtools}
 \usepackage{xfrac}
@@ -190,6 +208,7 @@
     #1
 }{def}
 \makeatother
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % TABLE OF CONTENTS
