add some changes

--- a/Past Courses Archived/Advanced Calculus 2/macros.tex
+++ b/Past Courses Archived/Advanced Calculus 2/macros.tex
@@ -1,3 +1,4 @@
+
 \newcommand{\liff}{\llap{$\iff$}}
 \newcommand{\rap}[1]{\rrap{\text{ (#1)}}}
 \newcommand{\red}[1]{\textcolor{red}{#1}}
@@ -42,4 +43,4 @@
 \newcommand{\cc}{\mathcal{C}}
 \newcommand{\disjointunion}{\mathbin{\dot{\cup}}}
 \newcommand{\diam}[1]{\text{diam}\, #1}
-\renewcommand{\at}{\Big|}
+\renewcommand{\put}{\Big|}
