--- a/Past Courses Archived/Probability/macros.tex
+++ b/Past Courses Archived/Probability/macros.tex
@@ -1,3 +1,5 @@
+\usepackage{mathtools}
+\usepackage{amsmath}
 \newcommand{\liff}{\llap{$\iff$}}
 \newcommand{\rap}[1]{\rrap{\text{ (#1)}}}
 \newcommand{\red}[1]{\textcolor{red}{#1}}
@@ -34,3 +36,4 @@
 \newcommand{\power}[1]{\mathcal{P}(#1)}
 \newcommand{\cc}{\mathcal{C}}
 \newcommand{\var}{\text{Var}}
+\renewcommand{\put}{\Big|}
